--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -7,7 +7,7 @@
 \usepackage{microtype}
 \usepackage{marvosym}% provides \Letter and \Telefon
 %\usepackage[cmintegrals,cmbraces]{newtxmath}
-\usepackage[osf]{ebgaramond}
+\usepackage[osf,sb]{ebgaramond}
 \usepackage{enumitem}
 \setitemize{nosep}
 % Margins
@@ -109,20 +109,13 @@ M.A., 2001   & Hispanic Linguistics, University of Massachusetts at Amherst\\
 \begin{tabular}{p{2.815cm}p{280pt}}
 August 2016 -- & Associate Professor and Chair, Department of Linguistics\\
  &McGill University\\
- & \\
- \end{tabular}
-
- \begin{tabular}{p{2.815cm}p{280pt}}
+ & \\[-8pt]
 August 2015 -- & Associate Professor, Department of Linguistics\\
  & McGill University\\
- & \\
- \end{tabular}
-  \begin{tabular}{p{2.815cm}p{280pt}}
+  & \\[-8pt]
 June 2014 -- &  Associate Professor\\
 July 2015 & Department of Linguistics and Department of Languages, Literatures, and Cultures\\ 
 & McGill University\\
- \end{tabular}
-  \begin{tabular}{p{2.815cm}p{280pt}}
 & \\[-8pt]
 August 2011 -- &  Assistant Professor\\
 May 2014& Department of Linguistics and Department of Languages, Literatures, and Cultures\\ 
@@ -139,6 +132,7 @@ Hispanic Studies\\
 Fall 2005 & Lecturer \\
 & Department of Linguistics and Philosophy \\ 
 & Massachusetts Institute of Technology\\
+& \\[-8pt]
 \end{tabular}
 \begin{tabular}{p{2.815cm}p{280pt}}
 Fall 2003 -- & Teaching Assistant\\
@@ -353,32 +347,32 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
- Alonso-Ovalle and Esmail Moghiseh. (forthcoming) ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, Cornell University.
+ Alonso-Ovalle and Esmail Moghiseh. 2021. ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503 {\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
 
       
     Alonso-Ovalle, Luis and Justin Royer. 2020. Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
-    [available at \href{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}]
+    {\footnotesize [\href{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}]}
     
       Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Neutralizing Free Choice Items via Maximal Domain
-Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Ninth Semantics and Linguistic Theory Conference}, ed. by Katherine Blake, Forrest Davis, Kaelyn Lamp, and Joseph Rhyne, CLC Publications, pp. 686–705. 
+Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Ninth Semantics and Linguistic Theory Conference}, ed. by Katherine Blake, Forrest Davis, Kaelyn Lamp, and Joseph Rhyne, CLC Publications, pp. 686–705. {\footnotesize
+[\href{https://doi.org/10.3765/salt.v29i0.4636}{https://doi.org/10.3765/salt.v29i0.4636}]}
       
 Alonso-Ovalle, Luis, and Vincent Rouillard. 2019. Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
 of the Forty-Ninth Annual Meeting of the North East Linguistic Society}, ed. by Maggie Baird and Jonathan Pesetsky, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 25-39.
  
- Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-i} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18  (Available
-at \href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf})
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-i} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18 {\footnotesize [\href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}]}
       
- Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, \href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df}
+ Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, {\footnotesize [\href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df} ]}
       
-       Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270.
+       Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270. {\footnotesize [\href{https://doi.org/10.3765/salt.v28i0.4439}{https://doi.org/10.3765/salt.v28i0.4439}]}
        
  Alonso-Ovalle, Luis, and Henrison Hsieh. 2018. Overcoming the Unexpected: The Tagalog Ability/Involuntary Action Form.  \textit{Proceedings of the Thirty-Fifth West Coast Conference on Formal Linguistics}, ed. by Will Bennett, Lindsay Hracs, and Dennis Storoshenko, Somerville, MA: Cascadilla Proceedings Project.      
       
- Alonso-Ovalle, Luis, and Henrison Hsieh. 2017. Causes and Expectations: On the Interpretation of the Tagalog Ability/Involuntary Action Verbal Inflection. \textit{Proceedings of the Twenty-Seventh Semantics and Linguistic Theory Conference}, ed. by Dan Burgdorf, Jacob Collard, Sireemas Maspong, and Brynhildur Stef\'ansd\'ottir, CLC Publications, pp. 75-94.
+ Alonso-Ovalle, Luis, and Henrison Hsieh. 2017. Causes and Expectations: On the Interpretation of the Tagalog Ability/Involuntary Action Verbal Inflection. \textit{Proceedings of the Twenty-Seventh Semantics and Linguistic Theory Conference}, ed. by Dan Burgdorf, Jacob Collard, Sireemas Maspong, and Brynhildur Stef\'ansd\'ottir, CLC Publications, pp. 75-94. {\footnotesize [\href{https://doi.org/10.3765/salt.v27i0.4132}{https://doi.org/10.3765/salt.v27i0.4132}]}
 
 Alonso-Ovalle, Luis. 2016. Are All Concessive Scalar Particles the Same? Probing into Spanish \textit{Siquiera}.  \textit{Proceedings of the Twenty-Sixth
   Semantics and Linguistic Theory Conference}, ed. by Mary Moroney and
-Carol-Rose Little, CLC Publications, pp. 185-204.
+Carol-Rose Little, CLC Publications, pp. 185-204. {\footnotesize [\href{https://doi.org/10.3765/salt.v26i0.3820}{https://doi.org/10.3765/salt.v26i0.3820}]}
 
 Alonso-Ovalle, Luis, and Paula Men\'endez-Benito. 2016. Modal Selectivity
 in the Nominal Domain: Spanish \textit{Uno Cualquiera}. \textit{Proceedings
@@ -394,7 +388,7 @@ Alonso-Ovalle, Luis and Paula
 Men\'endez-Benito. 2013. Modal Determiners and Alternatives:
 Quantity and Ignorance Effects.  \textit{Proceedings of the Twenty-Third
   Semantics and Linguistic Theory Conference}, ed. by Todd Snider, CLC
-Publications, pp. 570-586. 
+Publications, pp. 570-586. {\footnotesize [\href{https://doi.org/10.3765/salt.v23i0.2671}{https://doi.org/10.3765/salt.v23i0.2671}]}
 
 Alonso-Ovalle, Luis and Paula
 Men\'endez-Benito. 2013. Epistemic Indefinites: Are We Ignorant About
@@ -411,27 +405,22 @@ Men\'endez-Benito. 2013. Plural Epistemic
 Alonso-Ovalle, Luis and Paula Men\'endez-Benito. 2013. Random
 Choice Modality: Spanish \textit{Un {\em NP}
   Cualquiera}. \textit{Proceedings of the Seventeenth Annual} Sinn und Bedeutung \textit{Conference}, ed. by
-Emmanuel Chemla, Vincent Homer and Gr\'egoire Winterstein, Paris, pp. 27-43 (Available
-at http://semanticsarchive.net/sub2012/).
+Emmanuel Chemla, Vincent Homer and Gr\'egoire Winterstein, Paris, pp. 27-43 {\footnotesize [\href{http://semanticsarchive.net/sub2012/}{http://semanticsarchive.net/sub2012/}]}
 
 Alonso-Ovalle, Luis and Paula Men\'endez-Benito. 2011. Expressing Indifference: Spanish
 \textit{Un {\em NP} Cualquiera}. \textit{Proceedings of the Twenty-First
   Semantics and Linguistic Theory Conference}, ed. by Neil Ashton,
-Anca Chereches, and David Lutz, pp. 333-352. (Available at http://elanguage.net/journals/salt/issue/view/324)
+Anca Chereches, and David Lutz, pp. 333-352. {\footnotesize [\href{http://elanguage.net/journals/salt/issue/view/324]}{http://elanguage.net/journals/salt/issue/view/324]]}}
 
 Alonso-Ovalle, Luis; Men\'endez-Benito, Paula, and Schwarz,
 Florian. 2011. Maximize Presupposition and Two Types of Definite
 Competitors. \textit{Proceedings of the Thirty-Ninth Annual Meeting of the North East Linguistics
   Society}, ed. by Suzi Lima, Kevin Mullin, and Brian
 Smith, pp. 29-41. 
-% \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/wp-content/uploads/alon-men-schw-NELS39.pdf}{www.alonso-ovalle.net/wp-content/uploads/alon-men-schw-NELS39.pdf}
-% \end{itemize}
 
-Alonso-Ovalle, Luis. 2009. \textsc{Even} and Biased Questions: The Case of Spanish \textit{Siquiera}. \textit{Proceedings of the Nineteenth Semantics and Linguistic Theory Conference}, ed. by Satoshi Ito and Ed Cormany, Cornell University, pp. 1-18.
-% \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/wp-content/uploads/siquiera-salt19.pdf}{www.alonso-ovalle.net/wp-content/uploads/siquierasalt19.pdf}
-% \end{itemize}
+
+Alonso-Ovalle, Luis. 2009. \textsc{Even} and Biased Questions: The Case of Spanish \textit{Siquiera}. \textit{Proceedings of the Nineteenth Semantics and Linguistic Theory Conference}, ed. by Satoshi Ito and Ed Cormany, Cornell University, pp. 1-18. {\footnotesize [\href{https://doi.org/10.3765/salt.v19i0.2540}{https://doi.org/10.3765/salt.v19i0.2540}]}
+
 
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito. 2008. Minimal Domain Widening. \textit{Proceedings of the Twenty-Seventh
@@ -439,39 +428,21 @@ Alonso-Ovalle, Luis \textit{\&} Paula
   and Jason Bishop,  Somerville, MA: Cascadilla Press Project,
   pp. 36-44.
 
-% \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/wp-content/uploads/WCCFL27-alonso-menendez.pdf}{www.alonso-ovalle.net/wp-content/uploads/WCCFL27-alonso-menendez.pdf}
-% \end{itemize}
-
 
 Alonso-Ovalle, Luis. 2008b. Alternatives in the
   Disjunctive Antecedents Problem. \textit{Proceedings of the Twenty-Sixth
     West Coast Conference on Formal Linguistics}, ed. by Charles
   B. Chang and Hannah J. Haynie, Somerville, MA: Cascadilla Press Project, pp. 42-50
 
-% \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/papers/alonso-ovalle_WCCFL2007.pdf}{www.alonso-ovalle.net/papers/alonso-ovalle\_WCCFL2007.pdf}
-% \end{itemize}
 
 Alonso-Ovalle, Luis. 2005. Distributing the Disjuncts over the Modal Space. \textit{Proceedings of the Thirty-Fifth Annual Meeting of the North East Linguistic Society}, ed.\ by Leah Bateman and Cherlon Ussery,  University of Massachusetts, Amherst, MA: Graduate Linguistic Student Association, pp. 75-86. 
 
-%  \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/papers/alonso-ovalle_NELS2005.pdf}{www.alonso-ovalle.net/papers/alonso-ovalle\_NELS2005.pdf}
-% \end{itemize}
-
 Alonso-Ovalle, Luis. 2004. Simplification of Disjunctive Antecedents. \textit{Proceedings of the Thirty-Fourth Annual Meeting of the North East Linguistic Society}, ed.\ by Keir Moulton and Matthew Wolf,  University of Massachusetts, Amherst, MA: Graduate Linguistic Student Association, pp. 1-15.
 
-% \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/papers/alonso-ovalle_NELS2004.pdf}{www.alonso-ovalle.net/papers/alonso-ovalle\_NELS2004.pdf}
-% \end{itemize}
-
-%\markright{}
 
 Alonso-Ovalle, Luis \textit{\&} Elena Guerzoni. 2004. Double Negation, Negative Concord and Metalinguistic Negation. \textit{Proceedings of the Chicago Linguistics Society Meeting, 38-1: The Main Session,} ed. by Mary Andronis, Erin Debenport, Anne Pycha and Keiko Yoshimura. Chicago, IL: Chicago Linguistics Society Publications, pp. 15-31.
 
-% \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/papers/alonso-guerzoni_CLS2004.pdf}{www.alonso-ovalle.net/papers/alonso-guerzoni\_CLS2004.pdf}
-% \end{itemize}
+
 
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2003. Some Epistemic Indefinites. \textit{Proceedings of the Thirty-Third Annual Meeting of the North East Linguistic Society}, ed. by Makoto Kadowaki and Shigeto Kawahara,  University of Massachusetts, Amherst, MA: Graduate Linguistic Student Association, pp. 1-12. 
 
@@ -491,7 +462,7 @@ Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2002. Two Types of Weak
 % \renewcommand{\labelenumi}{{B}\theenumi.}
 % \renewcommand{\theenumii}{\roman{\enumii}}
 % \begin{revnumerate}
-Alonso-Ovalle, Luis. 2008. ``\textit{Fundamentos de sem\'antica composicional.} By Mar\'ia Victoria Escandell Vidal. Barcelona: Ariel, 2004.''  \textit{eLanguage}\\ URL: http://elanguage.net/blogs/booknotices/?p=17
+Alonso-Ovalle, Luis. 2008. ``\textit{Fundamentos de sem\'antica composicional.} By Mar\'ia Victoria Escandell Vidal. Barcelona: Ariel, 2004.''  \textit{eLanguage} {\footnotesize \href{http://elanguage.net/blogs/booknotices/?p=17}{http://elanguage.net/blogs/booknotices/?p=17}}
 
 Alonso-Ovalle, Luis. 2002. ``\textit{Definite Descriptions: A Reader.} Ed. by Gary Ostertag. Cambridge: the \textsc{mit} press, 1998.''  \textit{Language}, 78(2), p. 370.
 
