Tagalog JoS paper

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -223,6 +223,8 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. (forthcoming) Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}.
+
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (forthcoming) Keep \textit{Only} Strong, \textit{Semantics and Pragmatics}.
 
 Alonso-Ovalle, Luis \textit{\&} Justin Royer. (forthcoming) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}.
