OUP book ms review

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1231,12 +1231,12 @@ General:
 
 
 Book manuscripts: Oxford University Press
-(Summer 2011: one book manuscript.)
+(Summer 2011: one book manuscript)
 
 Book proposal reviewer for Wiley-Blackwell (Fall 2009: two book
 proposals; Spring 2010: one book
 proposal; Spring 2011: one book proposal; Winter 2012: one book
-proposal; Fall 2012: one book proposal; Fall 2015: one book proposal; Winter 2016: one book proposal)
+proposal; Fall 2012: one book proposal; Fall 2015: one book proposal; Winter 2016: one book proposal), Oxford University Press (Fall 2020: one book proposal.)
 
 Reviewed section manuscripts for edited volumes: 
 \begin{itemize}
