--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -509,6 +509,8 @@ Alonso-Ovalle, Luis. (ed.) 2003. \emph{On Semantic Processing, University of Mas
 
 \subsection*{Invited Talks}
 
+``Random Choice Indefinites: \textit{Uno Cualquiera}'', (with Paula Men\'endez-Benito), invited talk at semantics seminar (LING 879: Modality: Themes and Variations on Force and Flavor), University of Maryland, March 24, 2021.
+
 ``Spanish Bare Interrogatives and Number'', (with Vincent Rouillard), SENSUS, Constructing Meaning in Romance, University of Massachusetts, Amherst (online meeting), September 26, 2020.
 
 ``Random Choice Modality Beyond Romance: The View from Chuj (Mayan)'', (with Justin Royer), Indefinita in der Romania, XXXVI Romanistentag, University of Kassel, Germany, September 30, 2019.
