--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -281,7 +281,7 @@ Alonso-Ovalle, Luis. 2008a. Innocent Exclusion in an
 
 Alonso-Ovalle, Luis; Charles Clifton; Susana Fern\'andez-Solera \textit{\&} Lyn Frazier. 2002. Null \textit{vs.} Overt Pronouns and the Topic-Focus Articulation in Spanish, \textit{Journal of Italian Linguistics}, 14:2, pp. 151-169. 
 % \begin{itemize}[ ]
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/papers/tfa.pdf}{www.alonso-ovalle.net/papers/tfa.pdf}
+% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/tfa.pdf}{www.alonso-ovalle.net/papers/tfa.pdf}
 % \end{itemize}
 
 Alonso-Ovalle, Luis. 2000. Aspectos gnoseol\'ogicos de la ling\"u\'istica de Cuervo. \textit{Thesaurus}, LXIII, Instituto Caro y Cuervo, Bogot\'a (Colombia), pp. 345-378. 
@@ -366,7 +366,7 @@ of the Forty-Ninth Annual Meeting of the North East Linguistic Society}, ed. by 
       
  Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, {\footnotesize [\href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df} ]}
       
-       Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270. {\footnotesize [\href{https://doi.org/10.3765/salt.v28i0.4439}{https://doi.org/10.3765/salt.v28i0.4439}]}
+Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270. {\footnotesize [\href{https://doi.org/10.3765/salt.v28i0.4439}{https://doi.org/10.3765/salt.v28i0.4439}]}
        
  Alonso-Ovalle, Luis, and Henrison Hsieh. 2018. Overcoming the Unexpected: The Tagalog Ability/Involuntary Action Form.  \textit{Proceedings of the Thirty-Fifth West Coast Conference on Formal Linguistics}, ed. by Will Bennett, Lindsay Hracs, and Dennis Storoshenko, Somerville, MA: Cascadilla Proceedings Project.      
       
@@ -625,9 +625,9 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 ``Overcoming the Unexpected: The Tagalog Ability/Involuntary Action Form'' (with Henrison Hsieh),  \textit{Thirty-Fifth West Coast Conference on Formal Linguistics}, University of Calgary, April 28, 2017 [presented by co-author.]
 
-``Overcoming the Unexpected: the Tagalog Ability / Involuntary Action Verbal Inflection'' (with Henrison Hsieh), \textit{27h Annual West Coast Conference on Formal Linguistics}, University of Calgary, April 28, 2017 [presented by co-author.]
+``Overcoming the Unexpected: the Tagalog Ability / Involuntary Action Verbal Inflection'' (with Henrison Hsieh), \textit{35h Annual West Coast Conference on Formal Linguistics}, University of Calgary, April 28, 2017 [presented by co-author.]
 
-``Anchored implicatives: Tagalog Ability/Involuntary Action'' (with Henrison Hsieh), \textit{The 24th meeting of the Austronesian Formal Linguistics}, the University of Washington, April 9, 2017. [presented by co-author.]
+``Anchored implicatives: Tagalog Ability/Involuntary Action'' (with Henrison Hsieh), \textit{The 34th meeting of the Austronesian Formal Linguistics}, the University of Washington, April 9, 2017. [presented by co-author.]
 
 ``Spanish \textit{Siquiera} in the \textsc{Even} Landscape.", \textit{Chicago Linguistics Society 52nd Annual Meeting}, University of Chicago, April 21, 2016. 
 
@@ -718,6 +718,8 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 ``Cuervo en el panorama ling\"{u}\'istico europeo de fin de siglo'', \textit{51st Annual Kentucky Foreign Language Conference}, University of Kentucky, Lexington, KY, 1998. 
 
 \subsubsection*{Poster Presentations}
+
+``Against Wide Scope \textit{Any}'' (with Esmail Mogiseh and Jonathan Palucci), \textit{39th Annual West Coast Conference on Formal Linguistics}, University of Arizona [online meeting], April 9, 2021.
 
 ``Concessive Scalar Items: More about \textit{Siquiera} in Spanish'' (with Elizabeth Heredia-Murillo),
 \textit{Going Romance 34}, Paris-8 \& CNRS, November 26, 2020 [Flash talk, virtual meeting]
