--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -605,11 +605,13 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``Modality in the nominal domain: The Chuj \textit{yalnhej+wh} series'' (with Justin Royer), \textit{Thirty-First Semantics and Linguistic Theory Conference}, Brown University [virtually], May 7, 2021.
+
 ``Concessive scalar items: Symmetric vs. non-symmetric alternatives'' (with Elizabeth Heredia-Murillo), \textit{SENSUS, Constructing Meaning in Romance}, University of Massachusetts at Amherst, September 27, 2020.
 
 ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019. [presented by co-author.]
 
-``Neutralizing Free Choice Items via Maximal Domain Restriction: Farsi \textit{-i} Indefinites'' (with Esmail Moghiseh), \textit{Semantics and Linguistic Theory 29}, University of California at Los Angeles, May 18, 2019.
+``Neutralizing Free Choice Items via Maximal Domain Restriction: Farsi \textit{-i} Indefinites'' (with Esmail Moghiseh), \textit{Twenty-Ninth Semantics and Linguistic Theory Conference}, University of California at Los Angeles, May 18, 2019.
 
 ``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{Going Romance}, University of Utrecht, December 12, 2018 [presented by co-author.]
 
