--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -349,7 +349,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
- Alonso-Ovalle and Esmail Moghiseh. 2021. ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503 {\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
+Alonso-Ovalle, Luis, Esmail Moghiseh and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
+
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503 {\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
 
       
     Alonso-Ovalle, Luis and Justin Royer. 2020. Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
