--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -351,7 +351,11 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
 
- Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. ``Numeral \textit{Any}: the View from Farsi'', \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503 {\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
+Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Numeral \textit{Any}: in Favor of Viability, \textit{Proceedings of the Fifty-first Annual Meeting of the North East Linguistic Society}, ed. by Alessa Farinella and Angelica Hill.
+
+Alonso-Ovalle, Luis and Justin Royer. (forthcoming) Modality in the Nominal Domain: The Chuj \textit{yalnhej}+ wh Series, \textit{Proceedings of the Thirty-first Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr.
+
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. Numeral \textit{Any}: the View from Farsi, \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503 {\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
 
       
     Alonso-Ovalle, Luis and Justin Royer. 2020. Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
