--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -830,7 +830,13 @@ LLCU 610: Fundamentals of Linguistics for Language Teaching (Winter 2013.)
 
 \subsubsection*{PhD Dissertations}
 
-\subsubsection*{Co-Supervisor}
+
+Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
+
+Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, in progress.)
+
+Justin Gentile, ``Topics in Chuj DPs'', (co-supervised with Jessica Coon and Aron Hirsch, in progress.)
+
 
 Francesco Gentile, ``Non-Local Modification'', (co-supervised with Bernhard Schwarz and Junko Shimoyama, successfully defended on December 9, 2019.)
 
@@ -859,26 +865,33 @@ Alexandra Simonenko, ``Grammatical Ingredients of Definiteness'',
 
 \subsubsection*{(Co-)Supervisor}
 
+Jonathan Palucci, ``Unifying English Causative and Experiencer \textit{Have} : The Affected Argument'' (co-supervised with Jessica Coon, in progress).
+
+Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defended in May 2021).
+
+Will Johnston, ``\textit{Again} and Intensional Transitive Verbs'', (co-supervised with Junko Shimoyama, succesfully defended in January 2021).
+
+Esmail Moghiseh, ``Uniqueness and Existential Free Choice Items in Farsi" (successfully defended in July 2020).
+
+Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with Bernhard Schwarz, successfully defended in June 2020)
+
+Will Johnston, ``Questions and Cumulative Readings'', (co-supervised with Bernhard Schwarz, succesfully defended in May 2020).
+
 Christopher Bruno, ``Contrastive negation and Presuppositional Alternatives'', (co-supervised with Bernhard Schwarz, successfully defended in May 2017.)
+
+Dejan Milacic, ``Irrealis Mood in Kabyle'' (successfully defended in summer 2017.)
 
 Francesco Gentile, ``Adjectives as Reduced Relative Clauses?
 The case of Italian Prenominal and Postnominal adjectives.'', (successfully defended in April  2017.)
 
-Dan Goodhue, ``On the Presuppositions of Epistemic \textit{Must}", (co-supervised with Bernhard Schwarz, successfully defended in March 2015.)
-
-Will Johnston, ``Questions and Cumulative Readings'', (co-supervised with Bernhard Schwarz, succesfully defended in May 2020)
-
-Will Johnston, ``\textit{Again} and Intensional Transitive Verbs'', (co-supervised with Junko Shimoyama, succesfully defended in January 2021).
-
 Henrison Hsieh, ``An Additional Inference for Actuality Entailments'',
 (co-supervised with Bernhard Schwarz, successfully defended in June 2015.)
 
+Dan Goodhue, ``On the Presuppositions of Epistemic \textit{Must}", (co-supervised with Bernhard Schwarz, successfully defended in March 2015.)
+
+
 Oriana Kilbourn-Cer\'on, ``\textit{Almost}'', (co-supervised with Bernhard Schwarz,
 successfully defended in August 2013.) 
-
-Dejan Milacic, ``Irrealis Mood in Kabyle'' (successfully defended in summer 2017.)
-
-Esmail Moghiseh, ``Uniqueness and Existential Free Choice Items in Farsi" (successfully defended in July 2020)
 
 Gretchen McCulloch, ``Modal Indefinites in Mi'gmaq: \textit{Tampas}'', (successfully defended in July 2013.)
 
@@ -889,9 +902,6 @@ Marzieh Mortazavinia, ``\textit{Even} and \textit{Only}''
 (co-supervised with Bernhard Schwarz, successfully defended in July
 2013. )
 
-Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with Bernhard Schwarz, successfully defended in June 2020)
-
-Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'' (in progress)
 
 \subsubsection*{Committee Member}
 
