--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -835,7 +835,7 @@ Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
 
 Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, in progress.)
 
-Justin Gentile, ``Topics in Chuj DPs'', (co-supervised with Jessica Coon and Aron Hirsch, in progress.)
+Justin Royer, ``Topics in Chuj DPs'', (co-supervised with Jessica Coon and Aron Hirsch, in progress.)
 
 
 Francesco Gentile, ``Non-Local Modification'', (co-supervised with Bernhard Schwarz and Junko Shimoyama, successfully defended on December 9, 2019.)
