--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -934,7 +934,7 @@ Jonathan Palucci, ``On the Scope of \textit{Any}'' (fast-tracked to Ph.D. progra
 
 \subsubsection*{Co-Supervisor}
 
-Justin Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhard Schwarz.)
+Jason Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhard Schwarz.)
 
 \subsection*{Undergraduate Honors Theses (Supervisor)}
 
