--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -549,7 +549,7 @@ Scalarity'',  (with Paula Men\'endez-Benito), \textit{Linguistics colloquium, Ze
 Ottawa, March 10 2012.
 
 ``Natural language disjunction and the logic of our
-minds:, \textit{McGill Canadian Conference for Linguistics
+minds'', \textit{McGill Canadian Conference for Linguistics
   Undergraduates}, McGill University, March 9, 2012.
 
 ``Scalarity and Dependent Plurality in Spanish'', (with Paula Men\'endez-Benito),
@@ -602,7 +602,7 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsection*{Invited Commentaries}
 
-``Do Scalar Alternatives Provide Enough Truthmakers? (A Note on Santorio, Paolo (2015) ``Alternatives and Truthmakers in Conditional Semantics'' ), Invited commentary delivered at the 90th Annual Meeting of the American Philosophical Association Pacific Division. San Francisco, CA, March 31 2016. 
+``Do Scalar Alternatives Provide Enough Truthmakers? (A Note on Santorio, Paolo (2015) Alternatives and Truthmakers in Conditional Semantics')'', Invited commentary delivered at the 90th Annual Meeting of the American Philosophical Association Pacific Division. San Francisco, CA, March 31 2016. 
 
 
 \subsection*{Conference Presentations}
@@ -610,9 +610,12 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``Sub-eventive Modal Projection:
+The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{SENSUS 2, Constructing Meaning in Romance}, University of Massachusetts at Amherst [virtually], October 2, 2021.
+
 ``Modality in the nominal domain: The Chuj \textit{yalnhej+wh} series'' (with Justin Royer), \textit{Thirty-First Semantics and Linguistic Theory Conference}, Brown University [virtually], May 7, 2021.
 
-``Concessive scalar items: Symmetric vs. non-symmetric alternatives'' (with Elizabeth Heredia-Murillo), \textit{SENSUS, Constructing Meaning in Romance}, University of Massachusetts at Amherst, September 27, 2020.
+``Concessive scalar items: Symmetric vs. non-symmetric alternatives'' (with Elizabeth Heredia-Murillo), \textit{SENSUS, Constructing Meaning in Romance}, University of Massachusetts at Amherst [virtually], September 27, 2020.
 
 ``Random-Choice Modality: The View from Chuj (Mayan)'' (with Justin Royer), \textit{Sinn und Bedeutung 24}, University of Osnabr\"{u}ck, September 5, 2019. [presented by co-author.]
 
