--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -611,6 +611,11 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 \subsubsection*{Papers Delivered}
 
 ``Sub-eventive Modal Projection:
+The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{52nd
+  Meeting of the North East Linguistic Society}, Rutgers University [virtually], October 31st, 2021.
+
+
+``Sub-eventive Modal Projection:
 The Case of Spanish Subjunctive Relative Clauses'' (with Paula Men\'endez-Benito and Aynat Rubinstein), \textit{SENSUS 2, Constructing Meaning in Romance}, University of Massachusetts at Amherst [virtually], October 2, 2021.
 
 ``Modality in the nominal domain: The Chuj \textit{yalnhej+wh} series'' (with Justin Royer), \textit{Thirty-First Semantics and Linguistic Theory Conference}, Brown University [virtually], May 7, 2021.
