--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -225,7 +225,7 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (forthcoming) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}.
 
-Alonso-Ovalle, Luis \textit{\&} Justin Royer. (2021) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, published online October, 29, 2021 (\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. (2021) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, published online October, 29, 2021\\ (\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
 
 Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. (2021) Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472 (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
 
